Fix FTBFS due to RPC removal from glibc, ref https://bugs.debian.org/992913 This means trickle will require libtirpc to build now Additional Makefile fix.am to build libtrickle.so as well

--- a/configure.in
+++ b/configure.in
@@ -134,6 +134,9 @@ then
 AC_SUBST(EVENTINC)
 AC_SUBST(EVENTLIB)
 
+dnl Checks for libtirpc
+PKG_CHECK_MODULES(TIRPC, libtirpc)
+
 dnl check if underscores are needed
 AC_MSG_CHECKING(if underscores are needed for symbols)
 AC_TRY_RUN(
